<RelativeLayout
    xmlns:android                   = "http://schemas.android.com/apk/res/android"
    android:layout_width            = "match_parent"
    android:layout_height           = "match_parent">

    <LinearLayout
        android:id                      = "@+id/home_linearLayout"
        android:layout_width            = "wrap_content"
        android:layout_height           = "wrap_content"
        android:orientation             = "vertical"
        android:layout_centerInParent   = "true">

        <ImageView
            android:id                      = "@+id/home__picture"
            android:layout_width            = "100dp"
            android:layout_height           = "100dp"
            android:layout_gravity          = "center_horizontal"
            android:layout_marginBottom     = "15dp"
            android:src                     = "@drawable/emslogo"
            android:onClick                 = "web"
            />

        <EditText
            android:id                  = "@+id/home_username"
            android:layout_width        = "200dp"
            android:layout_height       = "60dp"
            android:hint                = "@string/hint_username"
            android:gravity             = "center"
            android:inputType           = "text"
            />

        <EditText
            android:id                  = "@+id/home_password"
            android:layout_width        = "200dp"
            android:layout_height       = "60dp"
            android:layout_marginTop    = "10dp"
            android:hint                = "@string/hint_password"
            android:gravity             = "center"
            android:inputType           = "textPassword"
            />

        <Button
            android:id                  = "@+id/home_login"
            android:layout_width        = "200dp"
            android:layout_height       = "60dp"
            android:layout_marginTop    = "10dp"
            android:text                = "@string/button_login"
            android:onClick             = "login"
            />

        <Button
            android:id                  = "@+id/home_register"
            android:layout_width        = "200dp"
            android:layout_height       = "60dp"
            android:layout_marginTop    = "10dp"
            android:text                = "@string/button_register"
            android:onClick             = "register"
            />

    </LinearLayout>
</RelativeLayout>
