<RelativeLayout
    xmlns:android               = "http://schemas.android.com/apk/res/android"
    android:layout_width        = "match_parent"
    android:layout_height       = "match_parent">

    <LinearLayout
        android:id                          = "@+id/register_linearLayout"
        android:layout_width                = "wrap_content"
        android:layout_height               = "wrap_content"
        android:orientation                 = "vertical"
        android:layout_centerInParent       = "true" >

        <TextView
            android:id                      = "@+id/dispMFR_title"
            android:layout_width            = "250dp"
            android:layout_height           = "35dp"
            android:text                    = "@string/title_activity_user_activity_display_mfr"
            android:textSize                = "25dp"
            android:textStyle               = "bold"
            android:layout_gravity          = "center_horizontal"
            android:gravity                 = "center_horizontal"
            />

        <ImageView
            android:id                      = "@+id/dispMFR_picture"
            android:layout_width            = "100dp"
            android:layout_height           = "100dp"
            android:layout_gravity          = "center_horizontal"
            android:layout_marginTop        = "15dp"
            android:layout_marginBottom     = "15dp"
            />

        <LinearLayout
            android:id                      = "@+id/dispMFR_linear_name"
            android:layout_width            = "250dp"
            android:layout_height           = "wrap_content"
            android:orientation             = "horizontal"
            >

            <TextView
                android:id                  = "@+id/dispMFR_placeholder_name"
                android:layout_width        = "70dp"
                android:layout_height       = "30dp"
                android:text                = "@string/placeholder_name"
                android:textSize            = "16dp"
                android:textStyle           = "bold"
                />

            <TextView
                android:id                  = "@+id/dispMFR_name"
                android:layout_width        = "180dp"
                android:layout_height       = "30dp"
                android:layout_marginLeft   = "10dp"
                android:textSize            = "16dp"
                />

        </LinearLayout>


        <LinearLayout
            android:id                      = "@+id/dispMFR_linear_number"
            android:layout_width            = "wrap_content"
            android:layout_height           = "wrap_content"
            android:orientation             = "horizontal"
            >

            <TextView
                android:id                  = "@+id/dispMFR_placeholder_number"
                android:layout_width        = "70dp"
                android:layout_height       = "30dp"
                android:text                = "@string/placeholder_number"
                android:textSize            = "16dp"
                android:textStyle           = "bold"
                />

            <TextView
                android:id                  = "@+id/dispMFR_number"
                android:layout_width        = "180dp"
                android:layout_height       = "30dp"
                android:layout_marginLeft   = "10dp"
                android:textSize            = "16dp"
                />

        </LinearLayout>

        <Button
            android:id                      = "@+id/dispMFR_next"
            android:layout_width            = "200dp"
            android:layout_height           = "60dp"
            android:layout_marginTop        = "10dp"
            android:text                    = "@string/button_nextMFR"
            android:textStyle               = "bold"
            android:onClick                 = "next"
            android:layout_gravity          = "center_horizontal"
            />

    </LinearLayout>

</RelativeLayout>